<resources>
    <string name="app_name">Where To Eat</string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="restaurants_10_elements">Restaurant 1 \nRestaurant 2 \nRestaurant 3 \nRestaurant 4 \nRestaurant 5 \nRestaurant 6 \nRestaurant 7 \nRestaurant 8 \nRestaurant 9 \nRestaurant 10</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="title">Title</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="cities">Cities</string>

    <string name="selected_item">Selected item:</string>
    <string-array name="Cities">
        <item>New York</item>
        <item>Bern</item>
        <item>Wien</item>
        <item>London</item>
        <item>Budapest</item>
        <item>Chicago</item>
    </string-array>
</resources>